Atualiza a configuração do projeto Swift Gamificação, alterando a porta do servidor para 8080 e adicionando um novo script de serviço. Remove arquivos CSS obsoletos e reorganiza a estrutura de estilos, introduzindo novos módulos CSS. Implementa novas telas e componentes para as funcionalidades de login, registro e dashboard, além de melhorias na lógica de roteamento e gerenciamento de estado.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Sistema de gamificação para motivar colaboradores das lojas Swift",
   "main": "src/index.html",
   "scripts": {
-    "start": "live-server src --port=3000 --open=/index.html",
-    "dev": "live-server src --port=3000 --open=/index.html --watch=src"
+    "start": "live-server src --port=8080 --open=/index.html",
+    "dev": "live-server src --port=8080 --open=/index.html",
+    "serve": "live-server src --port=8080 --quiet"
   },
   "keywords": [
     "gamification",
